// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressionListItem should match previous snapshot for progression spanning two modules 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ProgressionListItem
    completion={67}
    concept={
      Object {
        "id": "asdf",
        "moduleId": "abcd",
        "title": "dummy concept",
      }
    }
    subject={
      Object {
        "description": "dummy description",
        "id": "zxcv",
        "modules": Array [
          Object {
            "concepts": Array [
              Object {
                "id": "qwer",
                "moduleId": "abcd",
                "order": 0,
                "title": "dummy concept",
              },
              Object {
                "id": "asdf",
                "moduleId": "abcd",
                "order": 1,
                "title": "dummy concept",
              },
            ],
            "description": "dummy description",
            "id": "abcd",
            "subjectId": "zxcv",
            "title": "dummy module",
          },
          Object {
            "concepts": Array [
              Object {
                "id": "ghjk",
                "moduleId": "efgh",
                "order": 0,
                "title": "dummy concept",
              },
              Object {
                "id": "yuio",
                "moduleId": "efgh",
                "order": 1,
                "title": "dummy concept",
              },
            ],
            "description": "dummy description",
            "id": "efgh",
            "subjectId": "zxcv",
            "title": "dummy module",
          },
        ],
        "title": "dummy subject",
      }
    }
    updatedAt="2021-06-20T09:33:20.626274"
  />
</ContextProvider>
`;

exports[`ProgressionListItem should match previous snapshot for progression within a single module 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ProgressionListItem
    completion={67}
    concept={
      Object {
        "id": "qwer",
        "moduleId": "abcd",
        "title": "dummy concept",
      }
    }
    subject={
      Object {
        "description": "dummy description",
        "id": "zxcv",
        "modules": Array [
          Object {
            "concepts": Array [
              Object {
                "id": "qwer",
                "moduleId": "abcd",
                "order": 0,
                "title": "dummy concept",
              },
              Object {
                "id": "asdf",
                "moduleId": "abcd",
                "order": 1,
                "title": "dummy concept",
              },
            ],
            "description": "dummy description",
            "id": "abcd",
            "subjectId": "zxcv",
            "title": "dummy module",
          },
        ],
        "title": "dummy subject",
      }
    }
    updatedAt="2021-06-20T09:33:20.626274"
  />
</ContextProvider>
`;

exports[`ProgressionListItem should match previous snapshot for progression within the last concept of the last module 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ProgressionListItem
    completion={67}
    concept={
      Object {
        "id": "asdf",
        "moduleId": "abcd",
        "title": "dummy concept",
      }
    }
    subject={
      Object {
        "description": "dummy description",
        "id": "zxcv",
        "modules": Array [
          Object {
            "concepts": Array [
              Object {
                "id": "qwer",
                "moduleId": "abcd",
                "order": 0,
                "title": "dummy concept",
              },
              Object {
                "id": "asdf",
                "moduleId": "abcd",
                "order": 1,
                "title": "dummy concept",
              },
            ],
            "description": "dummy description",
            "id": "abcd",
            "subjectId": "zxcv",
            "title": "dummy module",
          },
        ],
        "title": "dummy subject",
      }
    }
    updatedAt="2021-06-20T09:33:20.626274"
  />
</ContextProvider>
`;
